Functional Interface
Signed-off-by: Camila Cavalcante <camiladsantoscavalcante@gmail.com>