@@ -3,11 +3,10 @@ package functional_interface.examples;
 import java.util.Arrays;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * Representa uma função que aceita um argumento do tipo T e retorna um resultado do tipo R.
- * É utilizada para transformar ou mapear os elementos do Stream em outros valores ou tipos.
+ * É utilizada para transformar, ou mapear os elementos do Stream em outros valores, ou tipos.
  */
 public class FunctionExample {
   public static void main(String[] args) {
@@ -19,10 +18,10 @@ public class FunctionExample {
 
     // Usar a função para dobrar todos os números no Stream e armazená-los em outra lista
     List<Integer> numerosDobrados = numeros.stream()
-        .map(dobrar)
-        .collect(Collectors.toList());
+        .map(n -> n * 2)
+        .toList();
 
     // Imprimir a lista de números dobrados
-    numerosDobrados.forEach(n -> System.out.println(n));
+    numerosDobrados.forEach(System.out::println);
   }
 }
